--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <meta name="twitter:description" content="">
     <meta name="twitter:image:src" content="">
     <!--end Twitter-->
+    <link rel="stylesheet" href="assets/style/style.css">
   </head>
   <body>
     <div id="wrapper">
-      <div id="app">
+      <div id="game">
       </div>
     </div>
     <div class="container">
@@ -26,6 +27,6 @@
     </audio>
     <script src="app.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <script data-main="init" src="node_modules/requirejs/require.js"></script>
+    <script data-main="init" src="require.js"></script>
   </body>
 </html>
