--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <audio id="browser-player">
     </audio>
-    <script src="app.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <script data-main="init" src="require.js"></script>
+    <script src="src/app.js"></script>
+    <script type="text/javascript" src="src/main.js"></script>
+    <script data-main="src/init" src="src/require.js"></script>
   </body>
 </html>
