--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     </div>
     <div class="container">
     </div>
-    <script src="node_modules/phaser/build/phaser.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <audio id="browser-player">
     </audio>
+    <script src="node_modules/phaser/build/phaser.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="src/app.js"></script>
-    <script type="text/javascript" src="src/main.js"></script>
-    <script data-main="src/init" src="src/require.js"></script>
+    <script type="text/javascript" src="src/bundle.js" charset="utf-8"></script>
   </body>
 </html>
